--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="list.css">
 </head>  
 <body>
-    <div id="app"></div> 
+    <div id="app">
+        Git Test
+    </div> 
 </body>  
 </html>   
